year_two/IPP/tests/constants/bad/test6.src
.ippcode18

WRITE string@isnte adas

